Changed all references of localStorage to sessionStorage, updated README, and rebuilt package in dist.

--- a/test/test.html
+++ b/test/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Tests for redux-localstorage-simple</title>
+		<title>Tests for redux-sessionstorage-simple</title>
 		<style>
 			body {color: #888;}
 			p {margin: 3px;}
@@ -11,10 +11,10 @@
 	</head>
 	<body>
 		<div id="testResults">
-			<h1>Tests for <u>redux-localstorage-simple</u></h1>
-			<p>Tests are run through your browser because LocalStorage needs to exist in the environment.</p>
+			<h1>Tests for <u>redux-sessionstorage-simple</u></h1>
+			<p>Tests are run through your browser because SessionStorage needs to exist in the environment.</p>
 			<br/>
-			<p><strong>Test 0</strong>: LocalStorage, are you there? <span id="test0"></span></p>
+			<p><strong>Test 0</strong>: SessionStorage, are you there? <span id="test0"></span></p>
 			<p><strong>Test 1</strong>: Save and load <u>entire</u> Redux state tree: <span id="test1"></span></p>
 			<p><strong>Test 2</strong>: Save and load <u>part</u> of Redux state tree: <span id="test2"></span></p>
 			<p><strong>Test 3</strong>: Save and load <u>entire</u> Redux state tree under a specified <u>namespace</u>: <span id="test3"></span></p>
